@@ -3,7 +3,7 @@
     "type": "roundcube-plugin",
     "description": "Adds an option to download all attachments to a message in one zip file, when a message has multiple attachments. Also allows the download of a selection of messages in one zip file. Supports mbox and maildir format.",
     "license": "GPLv3+",
-    "version": "3.2",
+    "version": "3.3",
     "authors": [
         {
             "name": "Thomas Bruederli",
